daemon/macros/tests/ui/multiple_fields.rs
use ozmux_macros::NewType;

#[derive(NewType)]
struct TwoFields(String, String);

fn main() {}
